look at the pretty pictures!

--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Oppgave 1</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
+    <header>Space</header>
     <main>
-      <section>
-        <article></article>
+      <section class="my-renders">
+        <figure>
+            <img src="images\planet.png" alt="A planet" />
+            <div class="image-description">A earth-like planet with a moon orbiting it with a sun in the background</div>
+          </figure>
+        <figure>
+          <img src="images\blackhole.png" alt="A black hole" />
+          <div class="image-description">A black hole</div>
+        </div>
+      </figure>
+      <figure>
+        <img src="images\galaxy.png" alt="A galaxy" />
+        <div class="image-description">A purple galaxy</div>
+      </figure>
       </section>
     </main>
     <footer></footer>
