--- a/index.html
+++ b/index.html
@@ -7,22 +7,46 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>Space</header>
+    <header>Space and stuff</header>
     <main>
       <section class="my-renders">
         <figure>
-            <img src="images\planet.png" alt="A planet" />
-            <div class="image-description">A earth-like planet with a moon orbiting it with a sun in the background</div>
-          </figure>
+          <img src="images\planet.png" alt="A planet" />
+          <div class="image-description">
+            A earth-like planet with a moon orbiting it with a sun in the
+            background
+          </div>
+        </figure>
         <figure>
           <img src="images\blackhole.png" alt="A black hole" />
           <div class="image-description">A black hole</div>
-        </div>
-      </figure>
-      <figure>
-        <img src="images\galaxy.png" alt="A galaxy" />
-        <div class="image-description">A purple galaxy</div>
-      </figure>
+          <a
+            href="https://www.youtube.com/watch?v=5naMFeWTBeY&ab_channel=Iridesium"
+            target="_blank"
+            >YouTube tutorial
+          </a>
+        </figure>
+        <figure>
+          <img src="images\galaxy.png" alt="A galaxy" />
+          <div class="image-description">A purple galaxy</div>
+          <a
+            href="https://www.youtube.com/watch?v=HCBW4fNAjBg&ab_channel=Iridesium"
+            target="_blank"
+            >Youtube tutorial</a
+          >
+        </figure>
+        <figure>
+          <img src="images/spaceship.png" alt="A spaceship" />
+          <div class="image-description">
+            A spaceship inspired by a collab between Porsche and Lucas Films
+            <a
+              href="https://www.porsche.com/international/aboutporsche/e-performance/magazine/e-performance-star-wars-2/"
+              target="_blank"
+            >
+              Original concept
+            </a>
+          </div>
+        </figure>
       </section>
     </main>
     <footer></footer>
