--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         </figure>
         <figure>
           <img src="images\blackhole.png" alt="A black hole" />
-          <div class="image-description">A black hole</div>
+          <div class="image-description">
+            A black hole with a orange and yellow gradient
+          </div>
           <a
             href="https://www.youtube.com/watch?v=5naMFeWTBeY&ab_channel=Iridesium"
             target="_blank"
